--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+data.source.driver-class-name= org.postgresql.Driver
+spring.datasource.username=vadim
+spring.datasource.password=19111993
+spring.datasource.url=jdbc:postgresql://localhost:5432/nata
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+ server.port=3185
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
