--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=vadim
 spring.datasource.password=19111993
 spring.datasource.url=jdbc:postgresql://localhost:5432/nata
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
  server.port=3185
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
