jsp  off   on json

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password=19111993
 spring.datasource.url=jdbc:postgresql://localhost:5432/nata
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
- server.port=3185
+ server.port=3186
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.open-in-view=false
