--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,11 @@
             <version>24.1.0</version>
             <scope>compile</scope>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
 
     </dependencies>
